<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/pref_header_ai"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:defaultValue="false"
            android:key="cb_ai_enabled"
            android:title="@string/pref_title_ai_enabled"
            android:summary="@string/pref_summary_ai_enabled"
            app:iconSpaceReserved="false" />

        <Preference
            android:key="pref_ai_settings"
            android:title="@string/pref_title_ai_settings"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
