<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_layout"
        layout="@layout/toolbar_layout" />

    <TextView
        android:id="@+id/podcast_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacer_1x"
        android:textStyle="italic"
        android:text="@string/live_podcast_preparing" />

    <ScrollView
        android:id="@+id/podcast_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/spacer_2x">

        <TextView
            android:id="@+id/podcast_transcript"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:lineSpacingMultiplier="1.2" />
    </ScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/spacer_1x">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_play_pause"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/live_podcast_pause" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_stop_podcast"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/live_podcast_stop" />
    </LinearLayout>
</LinearLayout>
